# TargetGym

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  python-app.yml
data/: pid_gains.json
plane/: agent.py  agent_gym.py  dynamics.py  env.py  env_gymnasium.py  env_jax.py  rendering.py  runner.py  utils.py
scripts/: bench_envs.py  benchmark_integration.py  shorten_gifs.py  tune_pid.py
src/plane/: agent.py  agent_gym.py  dynamics.py  env.py  env_gymnasium.py  env_jax.py  runner.py
src/plane_env/: __init__.py  dynamics.py  env.py  env_jax.py  integration.py  runner.py  utils.py
src/plane_env/bicycle/: env.py  env_jax.py  rendering.py
src/plane_env/car/: env.py  env_jax.py  rendering.py
src/plane_env/plane/: agent.py  agent_gym.py  dynamics.py  env.py  env_gymnasium.py  env_jax.py
src/target_gym/: __init__.py  benchmark_speed.py  integration.py  interpolator.py  utils.py
src/target_gym/bicycle/: env.py  env_jax.py  rendering.py
src/target_gym/car/: env.py  env_jax.py
src/target_gym/experts/: __init__.py  cpg.py  degradation.py  mpc.py  pd.py  pid.py  pid_tuning.py  relay_autotune.py
src/target_gym/glass_furnace/: __init__.py  env.py  env_jax.py  rendering.py
src/target_gym/plane/: dynamics.py  env.py  env_jax.py  rendering.py
src/target_gym/plane3d/: dynamics.py  env.py  env_jax.py  rendering.py
src/target_gym/reactor/: __init__.py  env.py  env_jax.py  rendering.py
src/target_gym/runners/: bicycle_runner.py  car_runner.py  cstr_runner.py  first_order_runner.py  four_tank_runner.py  glass_furnace_runner.py  plane3d_runner.py  plane_runner.py  reactor_runner.py  runners.py  utils.py
tests/: test_agent.py  test_dynamics.py  test_env.py  test_env_gymnasium.py  test_integration.py  test_interpolation.py  test_physics.py  test_runners.py  test_utils.py  test_visualization.py  test_vmap.py  test_wrapper.py
tests/bicycle/: test_bicycle_env.py  test_bicycle_env_jax.py
tests/car/: test_car_env_jax.py  test_car_physics.py  test_physics.py
tests/glass_furnace/: test_glass_furnace_env.py  test_glass_furnace_env_jax.py
tests/pc_gym/cstr/: test_cstr_env.py  test_cstr_env_jax.py
tests/plane/: test_agent.py  test_env_plane_gymnasium.py  test_plane_dynamics.py  test_plane_env.py  test_plane_physics.py  test_plane_visualization.py  test_plane_vmap.py
tests/plane3d/: test_plane3d_dynamics.py  test_plane3d_env.py
tests/reactor/: test_reactor_env.py  test_reactor_env_jax.py
(+13 files in other folders)
