[tool.poetry]
name = "plane"
version = "0.1.0"
description = ""
authors = ["Yann Berthelot <yannberthelot1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
gymnax = "^0.0.6"
numpy = "^1.26.1"
six = "^1.16.0"
matplotlib = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
mypy = "^1.6.1"
codecov = "^2.1.13"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
